2008-07-02 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-switcher-group.c:
	( hd_switcher_group_zoom_out):
	Ensure that the actor we are zooming is topmost.

2008-07-02 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-switcher-group.c:
	Refactored zoom-out effect to match the current spec.

2008-07-01 Tomas Frydrych  <tf@o-hand.com>

	* configure.ac:
	Temporarily remove --Werror until an issue in clutter headers is
	fixed upstream.

	* src/mb/hd-comp-mgr.c:
	Shortened timeout for unmap effect.

2008-06-30 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-switcher-group.c:
	(hd_switcher_group_remove_actor):
	Reparent the actor if appropriate.

	* src/mb/hd-comp-mgr.c:
	Added a counter for running unmap effects to control stacking order
	while unmap effects are running.

2008-06-18 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home.c:
	Added background to HdHome actor.

2008-06-18 Tomas Frydrych  <tf@o-hand.com>

	* src/hd-applet-test.c:
	Added --view-id parameter.

2008-06-18 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home.c:
	* src/home/hd-home.h:
	* src/mb/hd-comp-mgr.c:
	* src/mb/hd-comp-mgr.h:
	* src/mb/hd-desktop.c:
	Implemented specialized HdDesktop::stack() method to handle applet
	visibility.

2008-06-16 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-theme.c:
	(construct_buttons):
	Removed some testing code.

2008-06-16 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-switcher-group.c:
	(hd_switcher_group_hide_all):
	Added explicit call to clutter_actor_show() when reparenting
	client actors back to original parent.

2008-06-16 Tomas Frydrych  <tf@o-hand.com>

	* src/home/home.c:
	(hd_home_remove_view):
	(hd_home_do_layout_contents):
	Ensure correct position of Home in layout mode when last view in
	the list is removed.

2008-06-13 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home.c:
	Fixed layout view when a view is removed.

2008-06-13 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/Makefile.am:
	* src/mb/hd-dialog.c:
	* src/mb/hd-dialog.h: