@@ -88,6 +88,12 @@ void hd_home_move_applet_buttons (HdHome *home, gint x_by, gint y_by);
 
 gint hd_home_get_current_view_id (HdHome *home);
 
+void hd_home_set_operator_label (HdHome *home, const char *text);
+
+void hd_home_set_operator_icon (HdHome *home, const char *file);
+
+void hd_home_fixup_operator_position (HdHome *home);
+
 G_END_DECLS
 
 #endif
