@@ -77,6 +77,10 @@ gboolean hd_switcher_showing_switcher (HdSwitcher * switcher);
 
 void hd_switcher_deactivate (HdSwitcher * switcher);
 
+void hd_switcher_get_control_area_size (HdSwitcher *switcher,
+					guint *control_width,
+					guint *control_height);
+
 G_END_DECLS
 
 #endif
